canary-release/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default   # 👈 change if you’re not using default
  labels:
    istio-injection: enabled
